# ku-obsidian-wiki

./: .gitignore  .ku-wiki.toml  README.md  pyproject.toml
MyWiki/: CLAUDE.md  _changelog.md  index.md
MyWiki/.obsidian/: graph.json  workspace.json
MyWiki/wiki/: a-survey-on-agent-workflow-status-and-future.md  a-systematic-survey-of-automatic-prompt-optimization-techniques.md  act-wisely-cultivating-meta-cognitive-tool-use-in-agentic-multimodal-models.md  chain-of-thought-prompting-explained.md  chemgraph-as-an-agentic-framework-for-computational-chemistry-workflows.md  chengyoujiaagentic-critic-dataset.md  don39t-build-ai-automations-build-agentic-workflows-instead-claude-code.md  efficient-llm-serving-for-agentic-workflows-a-data-systems-perspective.md  enhancing-chain-of-thought-prompting-in-large-language-models-via-reasoning-patt.md  enhancing-granular-sentiment-classification-with-chain-of-thought-prompting-in-l.md  gcot-chain-of-thought-prompt-learning-for-graphs.md  habedicogitator.md  how-to-enable-firebase-authentication-and-add-providers-using-the-cli.md  how-to-transition-from-ai-automation-to-agentic-workflows.md  leduckhais-chain.md  local-prompt-optimization.md  many-tier-instruction-hierarchy-in-llm-agents.md  mattwesneygeneral-inquiry-thinking-chain-of-thought.md  nati112prompt-architect.md  personalized-recommendation-framework-using-large-language-model-and-chain-of-th.md  prompt-engineering.md  (+7 more)
example-vault/: CLAUDE.md  index.md
wiki_builder/: __init__.py  cli.py  compiler.py  digest.py  ku_client.py  vault_writer.py  wikilink_graph.py
(+3 files in other folders)
