[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ku-wiki"
version = "0.1.0"
description = "Karpathy-style LLM wiki builder powered by Knowledge Universe API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "VLSiddarth", email = "vlsiddarth7@gmail.com" }]
keywords = ["obsidian", "wiki", "rag", "knowledge", "llm", "karpathy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.26.0",
    "anthropic>=0.25.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "rich>=13.0.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.scripts]
ku-wiki = "wiki_builder.cli:main"

[project.urls]
Homepage = "https://github.com/VLSiddarth/ku-obsidian-wiki"
Repository = "https://github.com/VLSiddarth/ku-obsidian-wiki"
"Bug Tracker" = "https://github.com/VLSiddarth/ku-obsidian-wiki/issues"

[tool.hatch.build.targets.wheel]
packages = ["wiki_builder"]

[tool.ruff]
line-length = 100
target-version = "py310"
